--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
   </head>
   <body>
      
+ 	<div class = "gfg">GeeksforGeeks</div> 
+	  
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
