--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,6 @@
   </head>
   <body>
      
- 	<div class = "gfg">GeeksforGeeks</div> 
-	  
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
@@ -26,6 +24,7 @@
 	 <nav>
     		<ul>
         		<li><a href="/blog">Blog</a></li>
+			<li><a href="/teste">Teste</a></li>
     		</ul>
 	</nav>
 	      
