--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,17 +30,11 @@
 	      
 	<nav>
     		<ul>
-        		<li><a href="/blog">Blog <strong>Anlysis</strong></a></li>
-			<li><a href="/teste">Teste <strong>Teste</strong></a></li>
+        		<li><a href="/View">Blog <strong>Analysis</strong></a></li>
+			<li><a href="/teste"><strong>Teste</strong></a></li>
     		</ul>
 	</nav>
-	      
-	      	      
-	<ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-        </ul>
-	      
-	      
+	       
 	      
         {% if site.show_downloads %}
         <ul class="downloads">
