--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,9 @@
 	      
 	<nav>
     		<ul>
-        		<li><a href="/View">Blog <strong>Analysis</strong></a></li>
-			<li><a href="/teste"><strong>Teste</strong></a></li>
+        		<li><a href="/Contact">View <strong>Contacts</strong></a></li>
+			<li><a href="/CV">View <strong>CV</strong></a></li>
+			<li><a href="/Analysis">View <strong>Analysis</strong></a></li>
     		</ul>
 	</nav>
 	       
