--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,13 +28,13 @@
         {% endif %}
 
 	      
-	<nav>
+	<!--<nav>>
     		<ul>
         		<li><a href="/Contact">View <strong>Contacts</strong></a></li>
 			<li><a href="/CV">View <strong>CV</strong></a></li>
 			<li><a href="/Analysis">View <strong>Analysis</strong></a></li>
     		</ul>
-	</nav>
+	<!</nav>-->
 	       
 	      
         {% if site.show_downloads %}
