--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p class="view"><a href="{{ ./pages/Contact.html }}">View contact <small></a></p>
         
 	      
 	<!--<nav>>
