--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<nav id="menu">
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Produtos</a></li>
+        <li><a href="#">Missão</a></li>
+        <li><a href="#">Links</a></li>
+        <li><a href="#">Contato</a></li>
+    </ul>
+</nav>
+	  
+	  
+	  
+	  
+	  
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
