--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,11 +23,11 @@
   
         <p>{{ site.description | default: site.github.project_tagline }}</p>
     
-	<nav id="menu">
+	<!--<nav id="menu">>
 	    <ul>
 		<li><a href="./pages/Contact.html">Contact</a></li>
 	    </ul>
-	</nav>
+	<</nav>-->
 	       
 	      
         {% if site.show_downloads %}
